--- a/public/bitcoin_intro/index.html
+++ b/public/bitcoin_intro/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us" dir="ltr">
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=42931&amp;path=livereload" data-no-instant defer></script>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
   <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
 <title>Bitcoin_intro | Satlantis</title>
@@ -18,19 +18,19 @@
 <table>
   <tr>
     <td>
-      <a href="/"><img class="icon" src="/images/logos/BitcoinChatt_horizontal-dark-backgrounds.png" alt="Bitcoin chatt" class="logo"></a>
+      <a href="/"><img class="icon" src="./images/logos/BitcoinChatt_horizontal-dark-backgrounds.png" alt="Bitcoin chatt" class="logo"></a>
     </td>
     <td>
-      <h3 class="header-element"><a href="/coming_soon">About</a></h3>
+      <h3 class="header-element"><a href="./coming_soon">About</a></h3>
     </td>
     <td>
-      <h3 class="header-element"><a href="/coming_soon">Join</a></h3>
+      <h3 class="header-element"><a href="./coming_soon">Join</a></h3>
     </td>
     <td>
-      <h3 class="header-element"><a href="/coming_soon">Contact</a></h3>
+      <h3 class="header-element"><a href="./coming_soon">Contact</a></h3>
     </td>
     <td>
-      <h3 class="header-element"><a href="/coming_soon">Donate</a></h3>
+      <h3 class="header-element"><a href="./coming_soon">Donate</a></h3>
     </td>
   </tr>
 </table>
