reformat nav element

--- a/public/index.html
+++ b/public/index.html
@@ -19,19 +19,22 @@
 <table>
   <tr>
     <td>
-      <a href="/"><img class="icon" src="./images/logos/BitcoinChatt_horizontal-dark-backgrounds.png" alt="Bitcoin chatt" class="logo"></a>
+      <a href="/"><img class="icon" src="/images/logos/BitcoinChatt_horizontal-dark-backgrounds.png" alt="Bitcoin chatt" class="logo"></a>
     </td>
     <td>
-      <h3 class="header-element"><a href="./coming_soon">About</a></h3>
+      <h3 class="header-element"><a href="/coming_soon">About</a></h3>
     </td>
     <td>
-      <h3 class="header-element"><a href="./coming_soon">Join</a></h3>
+      <h3 class="header-element"><a href="/coming_soon">Blog</a></h3>
     </td>
     <td>
-      <h3 class="header-element"><a href="./coming_soon">Contact</a></h3>
+      <h3 class="header-element"><a href="/coming_soon">Join</a></h3>
     </td>
     <td>
-      <h3 class="header-element"><a href="./coming_soon">Donate</a></h3>
+      <h3 class="header-element"><a href="/coming_soon">Contact</a></h3>
+    </td>
+    <td>
+      <h3 class="header-element"><a href="/coming_soon">Donate</a></h3>
     </td>
   </tr>
 </table>
@@ -54,16 +57,14 @@
         </a>
       </div>
     </td>
-    <td>
+    <!--<td>
       <div class="nav-box">
         <a href="./coming_soon">
           <img class="nav-element" src="./images/placeholder.png" alt="Placeholder image"/>
           <h3>Blog</h3>
         </a>
       </div>
-    </td>
-  </tr>
-  <tr>
+    </td>-->
     <td>
       <div class="nav-box">
         <a href="./coming_soon">
