--- a/public/bitcoin_intro/index.html
+++ b/public/bitcoin_intro/index.html
@@ -3,7 +3,8 @@
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
   <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
-<title>Bitcoin_intro | Satlantis</title>
+<title>Bitcoin_intro | Bitcoin Chatt</title>
+<link rel="icon" href="/images/logos/Bitcoin Chatt Avatar.png">
 
     <link rel="stylesheet" href="/css/main.css">
 
